[package]
name = "ab-av1-walkdir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
clear_screen = "0.1.0"
clearscreen = "2.0.0"
colored = "2.0.0"
colorize = "0.1.0"
indicatif = "0.17.2"
serde = { version = "1.0.152", features = ["derive"] }
walkdir = "2.3.2"
